[project]
name = "dbback"
version = "0.1.0"
description = "A CLI tool to manage database snapshots"
authors = [
  { name="Krishnan Narayanan", email="krishnannarayanan05@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "click>=8.0",
]

[project.scripts]
dbback = "dbback.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dbback"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
